Update main.py and index.html
Added delete route to main.py
Added documentation link to index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,5 +6,6 @@
 </head>
 <body>
     <h1>Welcome to the Cafe & Wifi API</h1>
+    <h2>Documentation available <a href="https://documenter.getpostman.com/view/24019029/2s8YChhBqB" target="_blank" rel="noopener noreferrer">here</a></h2>
 </body>
 </html>
